@@ -2,7 +2,7 @@
 /**
 * @version		$Id$
 * @package		Joomla
-* @copyright	Copyright (C) 2005 - 2008 Open Source Matters. All rights reserved.
+* @copyright	Copyright (C) 2005 - 2009 Open Source Matters. All rights reserved.
 * @license		GNU/GPL, see LICENSE.php
 * Joomla! is free software and parts of it may contain or be derived from the
 * GNU General Public License or other free or open source software licenses.
@@ -27,12 +27,12 @@ class JConfig {
 	* -------------------------------------------------------------------------
 	*/
 	/* Site Settings */
-	var $offline = '0';
-	var $offline_message = 'This site is down for maintenance.<br /> Please check back again soon.';
-	var $sitename = 'Joomla!';			// Name of Joomla site
-	var $editor = 'tinymce';
-	var $list_limit = '20';
-	var $legacy = '0';
+	public $offline = '0';
+	public $offline_message = 'This site is down for maintenance.<br /> Please check back again soon.';
+	public $sitename = 'Joomla!';			// Name of Joomla site
+	public $editor = 'tinymce';
+	public $list_limit = '20';
+	public $legacy = '0';
 
 	/**
 	* -------------------------------------------------------------------------
@@ -40,68 +40,68 @@ class JConfig {
 	* -------------------------------------------------------------------------
 	*/
 	/* Database Settings */
-	var $dbtype = 'mysql';					// Normally mysql
-	var $host = 'localhost';				// This is normally set to localhost
-	var $user = '';							// MySQL username
-	var $password = '';						// MySQL password
-	var $db = '';							// MySQL database name
-	var $dbprefix = 'jos_';					// Do not change unless you need to!
+	public $dbtype = 'mysql';					// Normally mysql
+	public $host = 'localhost';				// This is normally set to localhost
+	public $user = '';							// MySQL username
+	public $password = '';						// MySQL password
+	public $db = '';							// MySQL database name
+	public $dbprefix = 'jos_';					// Do not change unless you need to!
 
 	/* Server Settings */
-	var $secret = 'FBVtggIk5lAzEU9H'; 		//Change this to something more secure
-	var $gzip = '0';
-	var $error_reporting = '-1';
-	var $helpurl = 'http://help.joomla.org';
-	var $ftp_host = '';
-	var $ftp_port = '';
-	var $ftp_user = '';
-	var $ftp_pass = '';
-	var $ftp_root = '';
-	var $ftp_enable = '';
-	var $tmp_path	= '/tmp';
-	var $log_path	= '/var/logs';
-	var $offset = '0';
-	var $live_site = ''; 					// Optional, Full url to Joomla install.
+	public $secret = 'FBVtggIk5lAzEU9H'; 		//Change this to something more secure
+	public $gzip = '0';
+	public $error_reporting = '-1';
+	public $helpurl = 'http://help.joomla.org';
+	public $ftp_host = '';
+	public $ftp_port = '';
+	public $ftp_user = '';
+	public $ftp_pass = '';
+	public $ftp_root = '';
+	public $ftp_enable = '';
+	public $tmp_path	= '/tmp';
+	public $log_path	= '/var/logs';
+	public $offset = '0';
+	public $live_site = ''; 					// Optional, Full url to Joomla install.
 
 	/* Session settings */
-	var $lifetime = '15';					// Session time
-	var $session_handler = 'database';
+	public $lifetime = '15';					// Session time
+	public $session_handler = 'database';
 
 	/* Mail Settings */
-	var $mailer = 'mail';
-	var $mailfrom = '';
-	var $fromname = '';
-	var $sendmail = '/usr/sbin/sendmail';
-	var $smtpauth = '0';
-	var $smtpuser = '';
-	var $smtppass = '';
-	var $smtphost = 'localhost';
+	public $mailer = 'mail';
+	public $mailfrom = '';
+	public $fromname = '';
+	public $sendmail = '/usr/sbin/sendmail';
+	public $smtpauth = '0';
+	public $smtpuser = '';
+	public $smtppass = '';
+	public $smtphost = 'localhost';
 
 	/* Cache Settings */
-	var $caching = '0';
-	var $cachetime = '15';
-	var $cache_handler = 'file';
+	public $caching = '0';
+	public $cachetime = '15';
+	public $cache_handler = 'file';
 
 	/* Debug Settings */
-	var $debug      = '0';
-	var $debug_db 	= '0';
-	var $debug_lang = '0';
+	public $debug      = '0';
+	public $debug_db 	= '0';
+	public $debug_lang = '0';
 
 	/* Meta Settings */
-	var $MetaDesc = 'Joomla! - the dynamic portal engine and content management system';
-	var $MetaKeys = 'joomla, Joomla';
-	var $MetaTitle = '1';
-	var $MetaAuthor = '1';
+	public $MetaDesc = 'Joomla! - the dynamic portal engine and content management system';
+	public $MetaKeys = 'joomla, Joomla';
+	public $MetaTitle = '1';
+	public $MetaAuthor = '1';
 
 	/* SEO Settings */
-	var $sef = '0';
-	var $sef_rewrite = '0';
-	var $sef_suffix = '';
+	public $sef = '0';
+	public $sef_rewrite = '0';
+	public $sef_suffix = '';
 
 	/* Feed Settings */
-	var $feed_limit   = 10;
+	public $feed_limit   = 10;
 	
 	/* Advanced Settings */
-	var $root_user = 62;	// The User Id of the user that has access to everything
+	public $root_user = 62;	// The User Id of the user that has access to everything
 }
 ?>
