@@ -36,9 +36,9 @@ class JRegistryFormatPHP extends JRegistryFormat {
 		foreach (get_object_vars( $object ) as $k => $v)
 		{
 			if (is_scalar($v)) {
-				$vars .= "\tvar $". $k . " = '" . addslashes($v) . "';\n";
+				$vars .= "\tpublic $". $k . " = '" . addslashes($v) . "';\n";
 			} elseif (is_array($v)) {
-				$vars .= "\tvar $". $k . " = " . $this->_getArrayString($v) . ";\n";
+				$vars .= "\tpublic $". $k . " = " . $this->_getArrayString($v) . ";\n";
 			}
 		}
 
